# api/index.ts
@@ -3,12 +3,9 @@ import cors from "cors";
 import express, { NextFunction, Request, Response } from "express";
 import { expressjwt } from "express-jwt";
 import helmet from "helmet";
-import swaggerUi from "swagger-ui-express";
-import yaml from "yamljs";
 import { authRouter } from "../controller/auth.routes";
-import { profileRouter } from "../controller/profile.routes";
-import { fileRouter } from "../controller/file.routes";
 import { matchRouter } from "../controller/match.routes";
+import { profileRouter } from "../controller/profile.routes";
 import { swipeRouter } from "../controller/swipe.routes";
 
 const app = express();
@@ -27,7 +24,6 @@ app.use(
 
 app.use("/", authRouter);
 app.use("/profiles", profileRouter);
-app.use("/files", fileRouter);
 app.use("/matches", matchRouter);
 app.use("/swipes", swipeRouter);
 
