# controller/swagger/swagger.yaml
@@ -262,99 +262,6 @@ paths:
                     $ref: '#/components/responses/ApplicationError'
                 '401':
                     $ref: '#/components/responses/Unauthorized'
-    /files:
-        post:
-            tags:
-                - files
-            summary: uploadFile
-            description: |
-                Upload a file (PDF, JPG, JPEG, PNG, or ZIP)
-            requestBody:
-                content:
-                    multipart/form-data:
-                        schema:
-                            type: object
-                            properties:
-                                file:
-                                    type: string
-                                    format: binary
-            responses:
-                '200':
-                    description: File uploaded successfully
-                    content:
-                        application/json:
-                            schema:
-                                type: object
-                                properties:
-                                    status:
-                                        type: string
-                                        example: 'success'
-                                    message:
-                                        type: string
-                                        example: 'File uploaded successfully'
-                                    file:
-                                        type: object
-                                        properties:
-                                            fieldname:
-                                                type: string
-                                                example: 'file'
-                                            originalname:
-                                                type: string
-                                                example: 'example.pdf'
-                                            encoding:
-                                                type: string
-                                                example: '7bit'
-                                            mimetype:
-                                                type: string
-                                                example: 'application/pdf'
-                                            destination:
-                                                type: string
-                                                example: 'uploads/'
-                                            filename:
-                                                type: string
-                                                example: 'example.pdf'
-                                            path:
-                                                type: string
-                                                example: 'uploads/example.pdf'
-                                            size:
-                                                type: integer
-                                                example: 12345
-                '400':
-                    $ref: '#/components/responses/ApplicationError'
-    /files/{filename}:
-        get:
-            tags:
-                - files
-            summary: 'Download a file'
-            produces:
-                - 'application/octet-stream'
-            parameters:
-                - in: 'path'
-                  name: 'filename'
-                  type: 'string'
-                  required: true
-                  description: 'The name of the file to be downloaded'
-                  example: 'aple.jpg'
-            responses:
-                '200':
-                    description: 'File downloaded successfully'
-                '404':
-                    description: 'File not found'
-        delete:
-            tags:
-                - files
-            summary: 'Delete a file'
-            parameters:
-                - in: 'path'
-                  name: 'filename'
-                  type: 'string'
-                  required: true
-                  description: 'The name of the file to be deleted'
-            responses:
-                '200':
-                    description: 'File deleted successfully'
-                '404':
-                    description: 'File not found'
     /matches:
         get:
             tags:
